--- a/templates/openshift-master.template
+++ b/templates/openshift-master.template
@@ -220,7 +220,7 @@ Parameters:
     Description: OpenShift version to deploy
     Default: '3.7'
     Type: String
-    AllowedValues: [ '3.7', '3.9' ]
+    AllowedValues: [ '3.7', '3.9', '3.10' ]
   VPCCIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
