--- a/templates/openshift.template
+++ b/templates/openshift.template
@@ -208,6 +208,7 @@ Parameters:
       - '3.7'
       - '3.9'
       - '3.10'
+      - '3.11'
   VPCCIDR:
     AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
     ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
@@ -363,7 +364,9 @@ Mappings:
     '3.9':
       AnsiblePlaybookGitRepoTag: 3.9.35-1
     '3.10':
-      AnsiblePlaybookGitRepoTag: 3.10.27-2    
+      AnsiblePlaybookGitRepoTag: 3.10.41-1
+    '3.11':
+      AnsiblePlaybookGitRepoTag: 3.11.0-0.20.0    
 Conditions:
   GovCloudCondition: !Equals
     - !Ref 'AWS::Region'
@@ -432,6 +435,9 @@ Conditions:
   Is310: !Equals
     - !Ref 'OpenshiftContainerPlatformVersion'
     - '3.10'
+  Is311: !Equals
+  - !Ref 'OpenshiftContainerPlatformVersion'
+  - '3.11'
   CustomClusterName: !Not
     - !Equals
       - !Ref ClusterName
@@ -1788,7 +1794,7 @@ Resources:
     Properties:
       Description: CWEvent rule to trigger OpenShift Scaling scripts within the Ansible
         config server. (AWS QuickStart)
-      Name: OpenshiftQuickstart-TriggerAnsibleScaling
+      Name: !Sub 'OSE-Trigger-${SubDomainPrefix}'
       State: ENABLED
       EventPattern:
         source:
