--- a/templates/openshift.template
+++ b/templates/openshift.template
@@ -341,20 +341,38 @@ Mappings:
   AWSAMIRegionMap:
     AMI:
       RHEL75HVM: RHEL-7.5_HVM_GA-20180322-x86_64-1-Hourly2-GP2
-    eu-central-1:
-      RHEL74HVM: ami-d74be5b8
-    ap-southeast-2:
-      RHEL74HVM: ami-ccecf5af
-    eu-west-1:
-      RHEL74HVM: ami-bb9a6bc2
     us-east-1:
-      RHEL74HVM: ami-c998b6b2
+      RHEL75HVM: ami-6871a115
     us-east-2:
-      RHEL74HVM: ami-cfdafaaa
+      RHEL75HVM: ami-03291866
+    us-west-1:
+      RHEL75HVM: ami-18726478
     us-west-2:
       RHEL75HVM: ami-28e07e50
+    ca-central-1:
+      RHEL75HVM: ami-49f0762d
+    eu-central-1:
+      RHEL75HVM: ami-c86c3f23
+    eu-west-1:
+      RHEL75HVM: ami-7c491f05
+    eu-west-2:
+      RHEL75HVM: ami-7c1bfd1b
+    eu-west-3:
+      RHEL75HVM: ami-5026902d
     ap-northeast-1:
-      RHEL74HVM: ami-30ef0556
+      RHEL75HVM: ami-6b0d5f0d
+    ap-northeast-2:
+      RHEL75HVM: ami-3eee4150
+    ap-northeast-3:
+      RHEL75HVM: ami-3eee4150
+    ap-southeast-1:
+      RHEL75HVM: ami-76144b0a
+    ap-southeast-2:
+      RHEL75HVM: ami-67589505
+    ap-south-1:
+      RHEL75HVM: ami-5b673c34
+    sa-east-1:
+      RHEL75HVM: ami-b0b7e3dc 
   LinuxAMINameMap:
     Redhat-Enterprise-Linux-7:
       Code: RHEL75HVM
