--- a/templates/openshift.template
+++ b/templates/openshift.template
@@ -384,7 +384,7 @@ Mappings:
     '3.10':
       AnsiblePlaybookGitRepoTag: 3.10.41-1
     '3.11':
-      AnsiblePlaybookGitRepoTag: 3.11.0-0.25.0    
+      AnsiblePlaybookGitRepoTag: v3.11.0    
 Conditions:
   GovCloudCondition: !Equals
     - !Ref 'AWS::Region'
