--- a/templates/openshift.template
+++ b/templates/openshift.template
@@ -1638,7 +1638,7 @@ Resources:
               - !Ref 'ACMCertificateEmail'
             - !Ref AWS::NoValue
       HealthCheck:
-        Target: HTTPS:443/console/
+        Target: HTTPS:443/api/
         HealthyThreshold: '2'
         UnhealthyThreshold: '3'
         Interval: '30'
